<resources>
    <string name="app_name">DDI_Fouad_Examen_1eval</string>
    <string name="armario">El <b>Armario Carla de puertas abatibles</b> está fabricado en laminado con estructura y
        acabado interior <b>blanco mate</b>. Su interior está compuesto por baldas, cajones y estantes.
        Las puertas centrales cuentan con espejo, sus <b>tiradores son metálicos de fácil apertura</b>.
        Fácil de combinar gracias a sus acabados, disponible también en roble sonoma.</string>
    <string name="home">Home</string>
    <string name="favorite">Favoritos</string>
    <string name="shop">Cesta</string>
    <string name="news">Novedades</string>
    <string name="title_top_app_bar">Fouad</string>
    <string name="content_description_edit">Editar algo</string>
    <string name="content_description_search">Buscar otro armario</string>
    <string name="content_description_more_1">Mas información</string>
    <string name="more_1">Mas</string>
    <string name="more_2">Mas_2</string>
    <string name="edit">Editar algo</string>
    <string name="fab_content_desc">Button to add more</string>
    <string name="armario_description">Foto de un armario con varias puertas</string>
    <string name="title_text">Armario de 4 puertas</string>
    <string name="medidas"><u>Medidas:</u>159,2 x 196 x 53,50 cm.</string>
    <string name="money">350,95 €</string>
    <string name="check_icon">Un icono para saber si el armario sigue en stock o no</string>
    <string name="stock">En Stock</string>
    <string name="especificaciones">Especificaciones</string>
    <string name="button_shop">Añadir a la cesta</string>
    <string name="opinions"><u>25 opiniones</u></string>
    <string name="todo">Todo</string>
    <string name="hogar">Home</string>
    <string name="mode">Moda</string>
    <string name="electronica">Electrónica</string>
    <string name="bricolaje">Bricolaje</string>
</resources>