<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/edit"
        android:icon="@drawable/edit"
        android:contentDescription="@string/content_description_edit"
        android:title="@string/edit"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/favorite"
        android:icon="@drawable/search"
        android:title="@string/favorite"
        android:contentDescription="@string/content_description_search"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/more_1"
        android:title="@string/more_1"
        android:contentDescription="@string/content_description_more_1"
        app:showAsAction="never" />

    <item
        android:id="@+id/more_2"
        android:title="@string/more_2"
        android:contentDescription="@string/content_description_more_1"
        app:showAsAction="never" />

</menu>